@@ -6,6 +6,7 @@ export(getLabelVar)
 export(getLabelVars)
 export(getMaxNLinesCombinePlot)
 export(getNLinesYGgplot)
+export(getParamNameVar)
 export(getPathTemplate)
 export(getPatientColorPalette)
 export(getPatientShapePalette)
@@ -27,6 +28,7 @@ importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggplot_build)
 importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,theme_bw)
+importFrom(glpgStyle,glpgColor)
 importFrom(glpgStyle,glpgPaletteCharts)
 importFrom(grid,convertX)
 importFrom(grid,gpar)
