@@ -23,9 +23,6 @@ subjectProfileIntervalPlot(data, paramVar,
 
 \item{paramLab}{string, label for \code{paramVar}}
 
-\item{paramGroupVar}{(optional) character vector with variable(s) of \code{data} with grouping.
-If specified, the parameters will be grouped by this(these) variable(s) in the y-axis.}
-
 \item{timeStartVar}{string, variable of \code{data} with start of range}
 
 \item{timeEndVar}{string, variable of \code{data} with end of range}
